--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "babel-plugin-styled-components": "^2.1.4",
     "gatsby": "^5.14.1",
     "gatsby-plugin-image": "^3.14.0",
