--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@reach/router": "^1.3.4",
     "babel-plugin-styled-components": "^2.1.4",
     "gatsby": "^5.14.1",
