--- a/package.json
+++ b/package.json
@@ -15,11 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.7.2",
-    "@fortawesome/free-brands-svg-icons": "^6.7.2",
-    "@fortawesome/free-regular-svg-icons": "^6.7.2",
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@radix-ui/react-navigation-menu": "^1.2.5",
     "@reach/router": "^1.3.4",
     "babel-plugin-styled-components": "^2.1.4",
     "gatsby": "^5.14.1",
@@ -32,6 +28,7 @@
     "gatsby-source-datocms": "^5.1.5",
     "gatsby-source-filesystem": "^5.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
+    "radix-ui": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^6.1.15"
