--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "radix-ui": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "styled-components": "^6.1.15"
   }
 }
