--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@mui/material": "^6.4.7",
+    "@mui/styled-engine-sc": "^6.4.6",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-menubar": "^1.1.6",
@@ -32,6 +34,7 @@
     "gatsby-source-datocms": "^5.1.5",
     "gatsby-source-filesystem": "^5.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
+    "primereact": "^10.9.2",
     "radix-ui": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
