--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@loadable/component": "^5.16.4",
+    "@loadable/server": "^5.16.5",
     "@mui/material": "^6.4.7",
     "@mui/styled-engine-sc": "^6.4.6",
     "@radix-ui/colors": "^3.0.0",
@@ -40,5 +42,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "styled-components": "^6.1.15"
+  },
+  "devDependencies": {
+    "@loadable/babel-plugin": "^5.16.1",
+    "@loadable/webpack-plugin": "^5.15.2"
   }
 }
