--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^6.4.7",
     "@mui/styled-engine-sc": "^6.4.6",
     "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-menubar": "^1.1.6",
     "@radix-ui/react-navigation-menu": "^1.2.5",
