--- a/package.json
+++ b/package.json
@@ -37,10 +37,13 @@
     "gatsby-source-datocms": "^5.1.5",
     "gatsby-source-filesystem": "^5.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
+    "html-react-parser": "^5.2.2",
+    "interweave": "^13.1.1",
     "primereact": "^10.9.2",
     "radix-ui": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^5.5.0",
     "styled-components": "^6.1.15"
   },
