--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@loadable/component": "^5.16.4",
-    "@loadable/server": "^5.16.5",
     "@mui/material": "^6.4.7",
     "@mui/styled-engine-sc": "^6.4.6",
     "@radix-ui/colors": "^3.0.0",
@@ -24,6 +22,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-menubar": "^1.1.6",
     "@radix-ui/react-navigation-menu": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@reach/router": "^1.3.4",
     "babel-plugin-styled-components": "^2.1.4",
     "classnames": "^2.5.1",
@@ -37,8 +36,6 @@
     "gatsby-source-datocms": "^5.1.5",
     "gatsby-source-filesystem": "^5.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
-    "html-react-parser": "^5.2.2",
-    "interweave": "^13.1.1",
     "primereact": "^10.9.2",
     "radix-ui": "^1.1.3",
     "react": "^18.2.0",
@@ -46,9 +43,5 @@
     "react-html-parser": "^2.0.2",
     "react-icons": "^5.5.0",
     "styled-components": "^6.1.15"
-  },
-  "devDependencies": {
-    "@loadable/babel-plugin": "^5.16.1",
-    "@loadable/webpack-plugin": "^5.15.2"
   }
 }
